fixed alignment of button text

--- a/client/src/components/ImageViewer/styles.css
+++ b/client/src/components/ImageViewer/styles.css
@@ -19,16 +19,9 @@
   color: #fff;
   cursor: pointer;
   transition: all .3s ease;
+  text-align: left;
 }
 
 .button.active{
   background-color: #e80009;
 }
-
-/* .button::before {
-  content: "+";
-  top: 2px;
-  position: absolute;
-  left: 6px;
-  font-size: 14px;
-} */
